--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.10.5",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "add": "^2.0.6",
+    "axios": "^1.2.3",
     "ethers": "^5.7.2",
     "framer-motion": "^6.5.1",
     "next": "^13.0.4",
