--- a/packages/frontend/.env.local.example
+++ b/packages/frontend/.env.local.example
@@ -26,4 +26,13 @@ NEXT_PUBLIC_RPC_5=https://rpc.ankr.com/eth_goerli
 NEXT_PUBLIC_RPC_137=https://rpc.ankr.com/polygon
 NEXT_PUBLIC_RPC_80001=https://rpc.ankr.com/polygon_mumbai
 
+NEXT_PUBLIC_DEPLOYED_DROPPIN_DIAMOND_ADDR=0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
+
+
+DISCORD_CLIENT_ID=1070337036919255130
+DISCORD_CLIENT_SECRET=xmnls4Tyd50KucaXDBpoAT6z8Do_E7VL
+DISCORD_REDIRECT_URL=http://localhost:3000/discord-auth-redirect
+
+NEXT_PUBLIC_DISCORD_AUTH_URL=https://discord.com/api/oauth2/authorize?client_id=1070337036919255130&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fdiscord-auth-redirect&response_type=code&scope=identify%20guilds%20guilds.members.read
+
 #NEXT_PUBLIC_RPC_{CHAINID}=TODO
