--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-qr-svg": "^2.4.0",
     "sharp": "^0.31.2",
     "use-async-effect": "^2.2.7",
     "wagmi": "^0.8.5"
