--- a/packages/frontend/.env.local.example
+++ b/packages/frontend/.env.local.example
@@ -12,7 +12,8 @@
 NEXT_PUBLIC_PRODUCTION_MODE=false             
 
 # The current deployment url (i.e. useful for calling Next.js API routes)
-NEXT_PUBLIC_URL=http://localhost:3000         
+NEXT_PUBLIC_URL=http://localhost:3000    
+NEXT_PUBLIC_BACKEND_URL=http://127.0.0.1:9000    
 
 # The default chain & all supported ones wagmi, rainbowkit, and the `useDeployments` will use
 # IMPORTANT: All respective RPC-urls must be defined below & hardhat deployments must be existent
@@ -34,5 +35,6 @@ DISCORD_CLIENT_SECRET=xmnls4Tyd50KucaXDBpoAT6z8Do_E7VL
 DISCORD_REDIRECT_URL=http://localhost:3000/discord-auth-redirect
 
 NEXT_PUBLIC_DISCORD_AUTH_URL=https://discord.com/api/oauth2/authorize?client_id=1070337036919255130&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fdiscord-auth-redirect&response_type=code&scope=identify%20guilds%20guilds.members.read
+
 
 #NEXT_PUBLIC_RPC_{CHAINID}=TODO
